Add to scripted memory limits. Build the plugin for test from GitHub.